[gd_scene load_steps=11 format=2]

[ext_resource path="res://units/ArmyDude.png" type="Texture" id=1]
[ext_resource path="res://units/ArmyDude.gd" type="Script" id=2]
[ext_resource path="res://units/flag.png" type="Texture" id=3]
[ext_resource path="res://themes/arial.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://units/circle.png" type="Texture" id=5]
[ext_resource path="res://themes/lifebar_foreground_white.png" type="Texture" id=6]
[ext_resource path="res://themes/lifebar_background.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 92.5279

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56, 40 )

[node name="ArmyDude" type="KinematicBody2D" groups=[
"unit",
]]
script = ExtResource( 2 )

[node name="UnitCount" type="Label" parent="."]
margin_left = -7.92171
margin_top = -115.91
margin_right = 10.0783
margin_bottom = -87.9098
custom_fonts/font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotating" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Rotating"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Flag" type="Sprite" parent="Rotating"]
position = Vector2( -47.6685, -21.3132 )
scale = Vector2( 0.256803, 0.293802 )
texture = ExtResource( 3 )

[node name="Outline" type="Polygon2D" parent="Rotating"]
visible = false
invert_enable = true
invert_border = 2.0
polygon = PoolVector2Array( -64.9262, -44.4044, 63.5522, -44.0707, 63.8859, 45.0298, -64.2588, 45.3635 )

[node name="Muzzle" type="Position2D" parent="Rotating"]
position = Vector2( 69.6308, 23.7919 )

[node name="UnitDetection" type="Area2D" parent="Rotating"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rotating/UnitDetection"]
polygon = PoolVector2Array( -0.994446, -2.97296, 448, -512, 1336, 0, 448, 512 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CombineArea" type="Area2D" parent="." groups=[
"army",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombineArea"]
shape = SubResource( 2 )

[node name="UnitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Outline" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="NumOutline" type="Sprite" parent="."]
position = Vector2( 0, -101 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Health" type="TextureProgress" parent="."]
margin_left = -24.0
margin_top = -71.0
margin_right = 168.0
margin_bottom = -31.0
rect_scale = Vector2( 0.25, 0.5 )
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
